fixed countdown timer z-index

--- a/whichone/static/css/main.css
+++ b/whichone/static/css/main.css
@@ -503,6 +503,7 @@ svg {
     width: 40px;
     height: 40px;
     transform: rotateY(-180deg) rotateZ(-90deg);
+    z-index: -1;
 }
 
 svg circle {
@@ -514,6 +515,7 @@ svg circle {
     stroke: rgb(255, 199, 137);
     fill: rgba(0, 0, 0, 0.5);
     animation: none;
+    z-index: -1;
 }
 
 .stroke-red {
